$Rev$
[2007/09/23]
DirBrowser.py mDirBrowser.py mEditorCtrl.py
                    Made Open Command Here work in Linux
Mixin.py            Disable RELOAD_MIXINS flag, if this is True, when you close 
                    directory browser and reopen it again, some extended menu will
                    not work.
FindReplace.py meide.py
                    When you open Find & Replace panel, and if findtext or replacetext
                    control has focus, you can press ESC to close Find & Replace panel
                    
[2007/09/22]
mHelp.py            Fix webbrowser bug. Thanks Tom Eubank
svn_plugin          Fix directory browser context menu process
FlatButtons.py      Compatible process
SvnSettings.py      Add svn proxy support under linux platform

[2007/09/21]
mHelp.py            Fix webbrowser bug. Thanks Tom Eubank
                    remove finddialog.xrc and finddialog_zh_CN.xrc
import_utils.py     When evalating a word, try to import it first.
SVNSettings.py      Add windows svn proxy setting support

[2007/09/20]
FindReplaceDialog.py Removed replaced with FindReplace.py and refactor find and replace

[2007/09/19]
SvnSupport.py       Fix svn_plugin crash in Linux
common.py           Add get_config_file_obj() function, and change the invoke.
PrefDialog.py dict4ini.py
                    Add config.ini support in Preference Dialog

[2007/09/17]
FindInFiles.py DirBrowser.py
                    Improve Find in Files process with thread
mEditorCtrl.py      If save file failed, then invoke save as
ScriptDialog.py ShellDialog.py
                    Fix shortcuts from 1-based bug
plugin_spec.txt     Update document
mLineending.py Editor.py
                    Fix line end mix checking bug also including twice prompt dialog bug
                    
[2007/09/15]
DirBrowser.py       Fix directory browser insert node bug
Editor.py mUnicode.py
                    Don't create a tmp file again, directly save the file